sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:6: error: missing argument list for method rkMaxRad
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `rkMaxRad _` or `rkMaxRad(_)` instead of `rkMaxRad`.
    flip(rkMaxRad)
         ^